feat(next): read private artifact versions (#114)
